[tool.poetry]
name = "twitch_bot"
version = "0.1.0"
description = "A Twitch Bot"
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Ozy-Viking/twitch_bot"
documentation = "https://ozy-viking-twitch-bot.readthedocs.io"
packages = [{include = "src"}]

[tool.poetry.dependencies]
setuptools = "^67.6.0"
python = "^3.10"
icecream = "^2.1.3"

# Documentation install
mkdocs = {version = "^1.4.2", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
mkdocs-git-revision-date-localized-plugin = {version = "^1.2.0", optional = true}
mkdocs-material = {version = "^9.1.2", optional = true}
mkdocstrings = {version = "^0.20.0", optional = true}
mkdocstrings-python = {version = "^0.8.3", optional = true}
pymdown-extensions = {version = "^9.10", optional = true}
mike = {version = "^1.1.2", optional = true}

[tool.poetry.group.dev]  # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
tox = "^4.4.6"
pytest = "^7.2.1"

[tool.poetry.extras]
docs = ['mkdocs', 'mkdocs-autorefs', 'mkdocs-git-revision-date-localized-plugin', 'mkdocs-material', 'mkdocstrings', 'mkdocstrings-python', 'pymdown-extensions', 'mike']
dev = ['mypy', 'tox', 'pytest']

[tool.poetry.scripts]

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/twitch_bot'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
