[tool.poetry]
name = "twitch_bot"
version = "0.1.0"
description = "A Twitch Bot"
authors = ["Zack Hankin <admin@hankin.io>"]
readme = "README.md"
repository = "https://github.com/Ozy-Viking/twitch_bot"
documentation = "https://ozy-viking-twitch-bot.readthedocs.io"
# packages = [{ include = "src" }]

[tool.poetry.dependencies]
setuptools = "^67.6.0"
python = "^3.10"
icecream = "^2.1.3"
django = "^4.2.7"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.3"
uritemplate = "^4.1.1"
pyyaml = "^6.0.1"
gunicorn = "^21.2.0"

# [tool.poetry.group.docs] # This part can be left out
# optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"
mkdocs-material = "^9.4.7"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
pymdown-extensions = "^10.3.1"
mike = "^2.0.0"

[tool.poetry.group.dev] # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
tox = "^4.4.6"
pytest = "^7.2.1"
isort = "^5.12.0"
black = "^23.10.1"

[tool.poetry.extras]
docs = [
    'mkdocs',
    'mkdocs-autorefs',
    'mkdocs-git-revision-date-localized-plugin',
    'mkdocs-material',
    'mkdocstrings',
    'mkdocstrings-python',
    'pymdown-extensions',
    'mike',
]
dev = ['mypy', 'tox', 'pytest', 'isort']

# [tool.poetry.scripts]

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/twitch_bot'
explicit_package_bases = false
ignore_missing_imports = true
exclude = ["docs/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
# namespace_packages = "website"
profile = "black"
known_django = "django"
known_rest_framework = ['rest_framework', 'djoser']
sections = "FUTURE,STDLIB,DJANGO,REST_FRAMEWORK,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
